# rag-cli

./: .env.example  .gitignore  Cargo.toml  LICENSE.md  Makefile  README.md  design_rag.md  docker-compose.yml  package.json  pnpm-lock.yaml  tsconfig.json
crates/api/: Cargo.toml
crates/api/src/: lib.rs
crates/chunk/: Cargo.toml
crates/chunk/src/: japanese.rs  lib.rs
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/common/: Cargo.toml
crates/common/src/: config.rs  error.rs  lib.rs  logger.rs
crates/embed/: Cargo.toml
crates/embed/src/: lib.rs  llamacpp.rs  ollama.rs
crates/ingest/: Cargo.toml
crates/ingest/src/: drawio.rs  lib.rs  markdown.rs  pdf.rs  svg.rs  web.rs
crates/llm/: Cargo.toml
crates/llm/src/: lib.rs  llamacpp.rs  ollama.rs
crates/pipeline/: Cargo.toml
crates/pipeline/src/: ingest.rs  lib.rs  retrieve.rs
crates/search/: Cargo.toml
crates/search/src/: lib.rs  qdrant.rs  rerank.rs
doc/: 01-installation.md  02-quickstart.md  03-cli.md  04-rest-api.md  05-configuration.md  06-reranker.md  07-troubleshooting.md  08-architecture.md  README.md
src/: config.ts  logger.ts
src/api/: server.ts
src/chunk/: japanese.ts
src/cli/: index.ts
src/embed/: index.ts  llamacpp.ts  ollama.ts
src/ingest/: drawio.ts  index.ts  markdown.ts  pdf.ts  svg.ts  web.ts
src/llm/: index.ts  llamacpp.ts  ollama.ts
src/pipeline/: ingest.ts  retrieve.ts
src/search/: qdrant.ts  rerank.ts
