[workspace]
members = [
    "crates/cli",
    "crates/api",
    "crates/pipeline",
    "crates/ingest",
    "crates/chunk",
    "crates/embed",
    "crates/search",
    "crates/llm",
    "crates/common",
]
resolver = "2"

[workspace.package]
version = "0.2.1"
edition = "2021"
license = "MIT"
repository = "https://github.com/aquaxis/rag-cli"
rust-version = "1.88"

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
thiserror = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter", "json"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "multipart", "rustls-tls", "stream"] }
clap = { version = "4", features = ["derive"] }
axum = { version = "0.7", features = ["multipart"] }
tower = { version = "0.5", features = ["timeout"] }
tower-http = { version = "0.6", features = ["cors", "trace", "timeout"] }
futures = "0.3"
futures-util = "0.3"
async-stream = "0.3"
bytes = "1"
qdrant-client = "1"
ollama-rs = "0.2"
quick-xml = { version = "0.36", features = ["serialize"] }
flate2 = "1"
gray_matter = "0.2"
unicode-segmentation = "1"
mime_guess = "2"
dotenvy = "0.15"
figment = { version = "0.10", features = ["toml", "env"] }
walkdir = "2"
globset = "0.4"
owo-colors = "4"
uuid = { version = "1", features = ["v4", "serde"] }
regex = "1"
url = "2"
base64 = "0.22"
percent-encoding = "2"
chrono = { version = "0.4", features = ["serde"] }
serde_yaml = "0.9"
once_cell = "1"
eventsource-stream = "0.2"
tokio-stream = "0.1"
ort = { version = "2.0.0-rc.12" }
ndarray = "0.16"
tokenizers = { version = "0.23", default-features = false, features = ["onig", "esaxx_fast"] }
hf-hub = { version = "1.0.0-rc.0" }
