[package]
name = "rag-common"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
figment.workspace = true
dotenvy.workspace = true
once_cell.workspace = true
axum.workspace = true
reqwest.workspace = true
