[package]
name = "rag-embed"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
rag-common = { path = "../common" }
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
reqwest.workspace = true
anyhow.workspace = true
tracing.workspace = true
