[package]
name = "rag-llm"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
rag-common = { path = "../common" }
tokio = { workspace = true, features = ["full"] }
serde.workspace = true
serde_json.workspace = true
reqwest = { workspace = true, features = ["json", "stream", "rustls-tls"] }
anyhow.workspace = true
tracing.workspace = true
async-stream.workspace = true
futures.workspace = true
futures-util.workspace = true
bytes.workspace = true
